--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ ENV/
 
 *tutorial/
 *data/
+*drivers/
 *.json
 *.zip
 *.html
@@ -76,6 +77,9 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+!package.json
+!package-lock.json
 
 # scripts/flow/*/.flowconfig
 # .flowconfig
